--- a/media-style.css
+++ b/media-style.css
@@ -34,7 +34,54 @@
     }
 }
 
+@media (max-width: 620px){
+   
+    .block-help{
+        height: 200px;
+        margin-top: 20px;
+   } 
+}
+
+
+
 @media (max-width:480px){
+
+
+    .igr-content>.block-gr{
+        font-size: 5px;
+    }
+
+    .block-gr>h3{
+        font-size: 15px;
+    }
+
+
+    .igr-mini{
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        gap: 5px;
+    }
+    
+    #h2{
+        color: black;
+        background: rgb(235, 156, 10);
+        border-radius: 5px;
+        border: 4px solid black;
+        font-size: 14px;
+    }
+    
+    .div-in{
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        flex-wrap: wrap;
+    }
+
+    .igr-content h2{
+        font-size: 15px;
+    }
     #one{
         width: 200px;
         height: 50px;
@@ -105,4 +152,19 @@
         visibility: hidden;
     }
     
+}
+
+@media screen and (max-width: 400px){
+    .block-gr>h4{
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width:393px){
+    .block-help{
+        height: 300px;
+        margin-top: 20px;
+        width: 100%;
+    }
 }
