--- a/style2.css
+++ b/style2.css
@@ -72,13 +72,19 @@
     width: 400px;
 }
 
-.hr2{
-    width: 100%;
-    height: 1px;
-    background-color: red ;
-}
 
 .conteiner3-1>h3{
     font-size: 25px;
     color: orangered;
+}
+
+.conteiner3-1{
+    margin-bottom: 100px;
+}
+
+
+.bl_raz{
+    height: 200px;
+    width: 100%;
+    background: rgba(255, 166, 0, 0);
 }
