--- a/style_login.css
+++ b/style_login.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-
-}
 
 #overlay {
     position: fixed;
@@ -137,4 +131,85 @@
     justify-content: end;
     width: 100%;
     font-size: 30px;
+}
+
+#overlayB{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(20px);
+    z-index: 999;
+    -webkit-animation: fade .6s;
+    -moz-animation: fade .6s;
+    animation: fade .6s;
+    overflow: auto;
+}
+
+.popupB{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapperB{
+    width: 420px;       
+    background: purple;
+    color: #ffffff;
+    font-family: "Popins", sans-serif;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.wrapperB i{
+    font-size: 40px;
+}
+
+.wrapperB a{
+    display: block;
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+    width: 100%;
+    background: white;
+    margin-top: 5px;
+}
+
+#overlayBS{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(20px);
+    z-index: 999;
+    -webkit-animation: fade .6s;
+    -moz-animation: fade .6s;
+    animation: fade .6s;
+    overflow: auto;
+}
+
+#overlayBSS{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(20px);
+    z-index: 999;
+    -webkit-animation: fade .6s;
+    -moz-animation: fade .6s;
+    animation: fade .6s;
+    overflow: auto;
 }
